<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.error404.loknotes.LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/person"
                    android:padding="20dp"/>

                <EditText
                    android:id="@+id/lg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="20dp"
                    android:inputType="text"
                    android:hint="@string/username_text"
                    android:fontFamily="monospace"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/lock"
                    android:padding="20dp" />

                <EditText
                    android:id="@+id/lg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/password_text"
                    android:fontFamily="monospace"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/lg_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:textSize="20dp"
                    android:background="@color/backgroundColor"
                    android:textColorHint="@color/textLogin"
                    android:hint="@string/login_text"
                    android:fontFamily="monospace"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:hint="/"
                    android:fontFamily="monospace"/>

                <Button
                    android:id="@+id/lg_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:textSize="20dp"
                    android:background="@color/backgroundColor"
                    android:textColorHint="@color/textLogin"
                    android:hint="@string/remember_text"
                    android:fontFamily="monospace"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userPass"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
