<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.error404.loknotes.ListActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#e0e0e0">

        <LinearLayout
            android:id="@+id/ll_menuBandung"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/backgroundColor"
            android:layout_marginBottom="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listBdg"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Surabi atau Serabi"
                android:textSize="15dp"
                android:textColor="@color/textKet"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menuBali"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/backgroundColor"
            android:layout_marginBottom="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listBl"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ayam Betutu Bali"
                android:textSize="15dp"
                android:textColor="@color/textKet"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menuJakarta"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/backgroundColor"
            android:layout_marginBottom="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listJkt"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kraktlor"
                android:textSize="15dp"
                android:textColor="@color/textKet"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menuYogyakarta"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/backgroundColor"
            android:layout_marginBottom="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listYk"
                android:textSize="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gudeg Jogja"
                android:textSize="15dp"
                android:textColor="@color/textKet"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
